--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TwitterDI1819
+application.vendor=Mario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TwitterDI1819.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
+file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
+file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
+file.reference.twitter4j-stream-4.0.7.jar=lib/twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.twitter4j-async-4.0.7.jar}:\
+    ${file.reference.twitter4j-core-4.0.7.jar}:\
+    ${file.reference.twitter4j-examples-4.0.7.jar}:\
+    ${file.reference.twitter4j-stream-4.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=logica.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
