--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.twitter4j-async-4.0.7.jar}:\
     ${file.reference.twitter4j-core-4.0.7.jar}:\
     ${file.reference.twitter4j-examples-4.0.7.jar}:\
-    ${file.reference.twitter4j-stream-4.0.7.jar}
+    ${file.reference.twitter4j-stream-4.0.7.jar}:\
+    ${reference.ComponenteEscribirTwit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,11 +65,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=logica.Test
+main.class=test.Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.ComponenteEscribirTwit=../../Basura/ComponenteEscribirTwit
+reference.ComponenteEscribirTwit.jar=${project.ComponenteEscribirTwit}/dist/ComponenteEscribirTwit.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
