--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${file.reference.twitter4j-core-4.0.7.jar}:\
     ${file.reference.twitter4j-examples-4.0.7.jar}:\
     ${file.reference.twitter4j-stream-4.0.7.jar}:\
-    ${reference.ComponenteEscribirTwit.jar}
+    ${reference.ComponenteEscribirTwit.jar}:\
+    ${reference.JLabelCircular.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +72,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.ComponenteEscribirTwit=../../Basura/ComponenteEscribirTwit
+project.JLabelCircular=../../Basura/JLabelCircular
 reference.ComponenteEscribirTwit.jar=${project.ComponenteEscribirTwit}/dist/ComponenteEscribirTwit.jar
+reference.JLabelCircular.jar=${project.JLabelCircular}/dist/JLabelCircular.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
