--- a/Componentes/JPanelTweet/nbproject/project.properties
+++ b/Componentes/JPanelTweet/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ClienteTwitter
-application.vendor=Mario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,24 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ClienteTwitter.jar
+dist.jar=${dist.dir}/JPanelTweet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
-file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
-file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
-file.reference.twitter4j-stream-4.0.7.jar=lib/twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.twitter4j-async-4.0.7.jar}:\
-    ${file.reference.twitter4j-core-4.0.7.jar}:\
-    ${file.reference.twitter4j-examples-4.0.7.jar}:\
-    ${file.reference.twitter4j-stream-4.0.7.jar}:\
-    ${reference.JLabelCircular.jar}:\
-    ${reference.JTextFieldLimitado.jar}:\
-    ${reference.JPanelTweet.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,17 +54,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.Test
+main.class=jpaneltweet.JPanelTweet
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JLabelCircular=../Componentes/JLabelCircular
-project.JPanelTweet=../Componentes/JPanelTweet
-project.JTextFieldLimitado=../Componentes/JTextFieldLimitado
-reference.JLabelCircular.jar=${project.JLabelCircular}/dist/JLabelCircular.jar
-reference.JPanelTweet.jar=${project.JPanelTweet}/dist/JPanelTweet.jar
-reference.JTextFieldLimitado.jar=${project.JTextFieldLimitado}/dist/JTextFieldLimitado.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
