--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Componentes/JPanelTweet/nbproject/private/
 /Componentes/JPanelTweet/build/
 /Componentes/JPanelTweet/dist/
+/Componentes/JLabelAccion/nbproject/private/
+/Componentes/JLabelAccion/build/
+/Componentes/JLabelAccion/dist/
