--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${reference.JLabelCircular.jar}:\
     ${reference.JTextFieldLimitado.jar}:\
     ${reference.JPanelTweet.jar}:\
-    ${reference.JLabelAccion.jar}
+    ${reference.JLabelTT.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,12 +74,12 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.JLabelAccion=../Componentes/JLabelAccion
 project.JLabelCircular=../Componentes/JLabelCircular
+project.JLabelTT=../Componentes/JLabelAccion
 project.JPanelTweet=../Componentes/JPanelTweet
 project.JTextFieldLimitado=../Componentes/JTextFieldLimitado
-reference.JLabelAccion.jar=${project.JLabelAccion}/dist/JLabelAccion.jar
 reference.JLabelCircular.jar=${project.JLabelCircular}/dist/JLabelCircular.jar
+reference.JLabelTT.jar=${project.JLabelTT}/dist/JLabelTT.jar
 reference.JPanelTweet.jar=${project.JPanelTweet}/dist/JPanelTweet.jar
 reference.JTextFieldLimitado.jar=${project.JTextFieldLimitado}/dist/JTextFieldLimitado.jar
 run.classpath=\
