--- a/Componentes/JTextFieldLimitado/nbproject/private/private.properties
+++ b/Componentes/JTextFieldLimitado/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/alumnop/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Mario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
