--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Componentes/JLabelAccion/nbproject/private/
 /Componentes/JLabelAccion/build/
 /Componentes/JLabelAccion/dist/
+/Componentes/JSwitch/nbproject/private/
+/Componentes/JSwitch/build/
+/Componentes/JSwitch/dist/
