--- a/Componentes/JSwitch/nbproject/project.properties
+++ b/Componentes/JSwitch/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ClienteTwitter
-application.vendor=Mario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,35 +24,20 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ClienteTwitter.jar
+dist.jar=${dist.dir}/JSwitch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
-file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
-file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
-file.reference.twitter4j-stream-4.0.7.jar=lib/twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.twitter4j-async-4.0.7.jar}:\
-    ${file.reference.twitter4j-core-4.0.7.jar}:\
-    ${file.reference.twitter4j-examples-4.0.7.jar}:\
-    ${file.reference.twitter4j-stream-4.0.7.jar}:\
-    ${reference.JLabelCircular.jar}:\
-    ${reference.JTextFieldLimitado.jar}:\
-    ${reference.JPanelTweet.jar}:\
-    ${reference.JLabelTT.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${reference.JSwitch.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,21 +54,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=interfaz.Login
+main.class=jswitch.JSwitch
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
-project.JLabelCircular=../Componentes/JLabelCircular
-project.JLabelTT=../Componentes/JLabelAccion
-project.JPanelTweet=../Componentes/JPanelTweet
-project.JSwitch=../Componentes/JSwitch
-project.JTextFieldLimitado=../Componentes/JTextFieldLimitado
-reference.JLabelCircular.jar=${project.JLabelCircular}/dist/JLabelCircular.jar
-reference.JLabelTT.jar=${project.JLabelTT}/dist/JLabelTT.jar
-reference.JPanelTweet.jar=${project.JPanelTweet}/dist/JPanelTweet.jar
-reference.JSwitch.jar=${project.JSwitch}/dist/JSwitch.jar
-reference.JTextFieldLimitado.jar=${project.JTextFieldLimitado}/dist/JTextFieldLimitado.jar
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
