pasado a 1.7 y agregada funcion de desactivar boton si no hay sesiones guardadas

--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/ClienteTwitter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.11.jar=lib/commons-codec-1.11.jar
 file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
 file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
 file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
@@ -45,15 +46,16 @@ javac.classpath=\
     ${reference.JPanelTweet.jar}:\
     ${reference.JLabelTT.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${reference.JSwitch.jar}
+    ${reference.JSwitch.jar}:\
+    ${file.reference.commons-codec-1.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -74,7 +76,7 @@ main.class=interfaz.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 project.JLabelCircular=../Componentes/JLabelCircular
 project.JLabelTT=../Componentes/JLabelAccion
 project.JPanelTweet=../Componentes/JPanelTweet
