--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -47,7 +47,9 @@ javac.classpath=\
     ${reference.JLabelTT.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${reference.JSwitch.jar}:\
-    ${file.reference.commons-codec-1.11.jar}
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${libs.HSQLDB.classpath}:\
+    ${libs.JasperReports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
