--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -49,7 +49,7 @@ javac.classpath=\
     ${reference.JSwitch.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${libs.HSQLDB.classpath}:\
-    ${libs.JasperReports.classpath}:\
+    ${libs.JasperResports.classpath}:\
     ${libs.JavaHelp.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
