--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.11.jar=lib/commons-codec-1.11.jar
+file.reference.jcalendar-1.4.jar=dist/lib/jcalendar-1.4.jar
 file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
 file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
 file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
@@ -49,8 +50,9 @@ javac.classpath=\
     ${reference.JSwitch.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${libs.HSQLDB.classpath}:\
-    ${libs.JasperResports.classpath}:\
-    ${libs.JavaHelp.classpath}
+    ${libs.JasperReports.classpath}:\
+    ${libs.JavaHelp.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
