--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -50,7 +50,7 @@ javac.classpath=\
     ${reference.JSwitch.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
     ${libs.HSQLDB.classpath}:\
-    ${libs.JasperReports.classpath}:\
+    ${libs.JasperResports.classpath}:\
     ${libs.JavaHelp.classpath}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
