--- a/Componentes/JTextFieldLimitado/nbproject/private/private.properties
+++ b/Componentes/JTextFieldLimitado/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/adan/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Mario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
