JDialogoInforme actualizado. Corregir destino informes

--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -29,12 +29,33 @@ dist.jar=${dist.dir}/ClienteTwitter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/AbsoluteLayout.jar
+file.reference.commons-beanutils-1.8.2.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/commons-beanutils-1.8.2.jar
 file.reference.commons-codec-1.11.jar=lib/commons-codec-1.11.jar
+file.reference.commons-codec-1.11.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/commons-codec-1.11.jar
+file.reference.commons-collections-3.2.1.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/commons-logging-1.1.jar
+file.reference.hsqldb-1.8.0-10.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/hsqldb-1.8.0-10.jar
+file.reference.iText-2.1.7.js2.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/jasperreports-5.6.0.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/jcalendar-1.4.jar
+file.reference.jhall.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/jhall.jar
+file.reference.JLabelCircular.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/JLabelCircular.jar
+file.reference.JLabelTT.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/JLabelTT.jar
+file.reference.JPanelTweet.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/JPanelTweet.jar
+file.reference.JSwitch.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/JSwitch.jar
+file.reference.JTextFieldLimitado.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/JTextFieldLimitado.jar
+file.reference.servlet-api-2.4.jar=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/servlet-api-2.4.jar
 file.reference.twitter4j-async-4.0.7.jar=lib/twitter4j-async-4.0.7.jar
+file.reference.twitter4j-async-4.0.7.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/twitter4j-async-4.0.7.jar
 file.reference.twitter4j-core-4.0.7.jar=lib/twitter4j-core-4.0.7.jar
+file.reference.twitter4j-core-4.0.7.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/twitter4j-core-4.0.7.jar
 file.reference.twitter4j-examples-4.0.7.jar=lib/twitter4j-examples-4.0.7.jar
+file.reference.twitter4j-examples-4.0.7.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/twitter4j-examples-4.0.7.jar
 file.reference.twitter4j-stream-4.0.7.jar=lib/twitter4j-stream-4.0.7.jar
+file.reference.twitter4j-stream-4.0.7.jar-1=/home/sergio/DAM/Java_Libraries/ClienteTwitter/lib/twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,13 +67,33 @@ javac.classpath=\
     ${reference.JTextFieldLimitado.jar}:\
     ${reference.JPanelTweet.jar}:\
     ${reference.JLabelTT.jar}:\
-    ${libs.absolutelayout.classpath}:\
     ${reference.JSwitch.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.JLabelCircular.jar}:\
+    ${file.reference.JLabelTT.jar}:\
+    ${file.reference.JPanelTweet.jar}:\
+    ${file.reference.JSwitch.jar}:\
+    ${file.reference.JTextFieldLimitado.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-codec-1.11.jar-1}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.hsqldb-1.8.0-10.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jhall.jar}:\
+    ${file.reference.servlet-api-2.4.jar}:\
+    ${file.reference.twitter4j-async-4.0.7.jar-1}:\
+    ${file.reference.twitter4j-core-4.0.7.jar-1}:\
+    ${file.reference.twitter4j-examples-4.0.7.jar-1}:\
+    ${file.reference.twitter4j-stream-4.0.7.jar-1}:\
     ${libs.HSQLDB.classpath}:\
-    ${libs.JasperResports.classpath}:\
     ${libs.JavaHelp.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.JasperReports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
