--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Componentes/JSwitch/nbproject/private/
 /Componentes/JSwitch/build/
 /Componentes/JSwitch/dist/
+/Componentes/JLabelAccion - copia/build/
+/Componentes/JLabelAccion - copia/dist/
+/Componentes/JLabelAccion - copia/nbproject/private/
