--- a/Componentes/JLabelAccion/nbproject/project.properties
+++ b/Componentes/JLabelAccion/nbproject/project.properties
@@ -29,9 +29,17 @@ dist.jar=${dist.dir}/JLabelTT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.twitter4j-async-4.0.7.jar=../../ClienteTwitter/lib/twitter4j-async-4.0.7.jar
+file.reference.twitter4j-core-4.0.7.jar=../../ClienteTwitter/lib/twitter4j-core-4.0.7.jar
+file.reference.twitter4j-examples-4.0.7.jar=../../ClienteTwitter/lib/twitter4j-examples-4.0.7.jar
+file.reference.twitter4j-stream-4.0.7.jar=../../ClienteTwitter/lib/twitter4j-stream-4.0.7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.twitter4j-async-4.0.7.jar}:\
+    ${file.reference.twitter4j-core-4.0.7.jar}:\
+    ${file.reference.twitter4j-examples-4.0.7.jar}:\
+    ${file.reference.twitter4j-stream-4.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
