--- a/ClienteTwitter/nbproject/project.properties
+++ b/ClienteTwitter/nbproject/project.properties
@@ -52,7 +52,7 @@ javac.classpath=\
     ${libs.JavaHelp.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JasperReports.classpath}
+    ${libs.JasperResports.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
